tests/tests/neg/error_messages/annot_check/invalid_detach_fn_sig.rs
#![flux::specs {

   fn inc(n:i32) -> i32{v: n < v};
   fn id(n:i32) -> i32[n]; //~ ERROR unresolved name `id`

}]

pub fn inc(n: i32) -> i32 {
    n + 1
}
